* file.c (File.extname): Documentation for extname on dotfiles and   files ending with a dot. Also, added example for this.   [ruby-core:47852] [Bug #7112]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@37749 b2dd03c8-39d4-4d8f-98ff-823fe69b080e